# pdm_to_requietements

./: README.md  pyproject.toml  requirements.txt
